changed style, added jQuery particle effect

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>Lu Yu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -14,9 +14,13 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		 <script type='text/javascript' src='jquery.particleground.js'></script>
+  		<script type='text/javascript' src='demo.js'></script>
+  		<script type='text/javascript' src='jquery-1.11.1.min.js'></script>
+  		
 	</head>
-	<body class="is-loading">
-
+	<body id="particles" class="is-loading">
+		
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -24,9 +28,15 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1>Lu Yu</h1>
+							Web Developer, Photographer, Music Lover
 						</header>
+						<hr />
+						<ul>
+							<li style="list-style: none"><a href="">Github</a></li>
+							<li style="list-style: none"><a href="">Blog</a></li>
+							<li style="list-style: none"><a href="">Portfolio</a></li>
+						</ul>
 						<!--
 						<hr />
 						<h2>Extra Stuff!</h2>
@@ -65,10 +75,11 @@
 						<hr />
 						-->
 						<footer>
+						
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
 								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="#" class="fa-weibo">Weibo</a></li>
+								<li><a href="#" class="fa-youtube">Youtube</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -76,7 +87,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Lu Yu</li>
 						</ul>
 					</footer>
 
