--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		 <script type='text/javascript' src='jquery.particleground.js'></script>
-  		<script type='text/javascript' src='demo.js'></script>
-  		<script type='text/javascript' src='jquery-1.11.1.min.js'></script>
+		 <script type='text/javascript' src='assets/js/jquery.particleground.js'></script>
+  		<script type='text/javascript' src='assets/js/demo.js'></script>
+  		<script type='text/javascript' src='assets/js/jquery-1.11.1.min.js'></script>
   		
 	</head>
 	<body id="particles" class="is-loading">
