--- a/projects/index.html
+++ b/projects/index.html
@@ -106,6 +106,21 @@
           github: 'https://github.com/LookRain/nus_math_soc',
           img: './images/nusmath.png'
         },
+        {
+          title: 'V-ToDo',
+          description: 'A ToDo MVC PWA created using Vue.js',
+          link: 'http://luyu.rocks/projects/v-todo/',
+          github: 'https://github.com/LookRain/html_portfolio/tree/master/projects/v-todo',
+          img: './images/vtodo.png'
+        },
+        {
+          title: 'Photography Portfolio',
+          description: '(Under progress...) My personal photography portfolio created using Laravel and Vue.js',
+          link: 'http://portfolio.luyu.rocks/',
+          github: 'https://github.com/LookRain/photo-portfolio',
+          img: './images/photo.png'
+        },
+
         ]
       }
     })
